maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:6: error: value unary_! is not a member of plm.universe.Direction
    if(!getDirection()==Direction.NORTH || estFaceMur())
       ^